# graphicsLibrary

./: .gitignore  CMakeLists.txt  main.cpp
geometry/: CMakeLists.txt
geometry/include/: character.h  color.h  geometry.h  geometry3d.h  line.h  nonInclusiveRange.h  point.h  rectangle.h  utility.h
geometry/internal/: circle.h  cube.h  rubiksCube.h  shader.h
geometry/src/: circle.cpp  color.cpp  cube.cpp  events.cpp  geometry.cpp  geometry3d.cpp  line.cpp  nonInclusiveRange.cpp  point.cpp  rectangle.cpp  rubiksCube.cpp  shader.cpp  utility.cpp
graphicsLibrary/: makefile  test.cpp
guiElements/: CMakeLists.txt
guiElements/include/: button.h  checkbox.h  container.h  element.h  graph.h  grid.h  guiElements.h  input.h  lineBreak.h  text.h  window.h
guiElements/src/: button.cpp  checkbox.cpp  container.cpp  element.cpp  graph.cpp  grid.cpp  input.cpp  lineBreak.cpp  text.cpp  window.cpp
include/: event.h  events.h  glfwHandlers.h  tree.h
shouldBeInBuildFolder/: document.xml
shouldBeInBuildFolder/shaders/: circle.frag  circle.vert  line.frag  line.vert  rectangle.frag  rectangle.vert  text.frag  text.vert
